JavaCC/JavaCC/bin/uniandes/lym/robot/control/Robot.jj
/*
Gramatica para el Robot:
Autor: Alejandro Arango
Modificado por: Silvia Takahashi
Modificado por: Juan Pablo Morales.
Agregadas producciones para manejar globos
Modificado por Silvia Takahashi*/


options 
{
  
	LOOKAHEAD=1; 
	IGNORE_CASE=true;
	STATIC = false;
	
}
   

PARSER_BEGIN(Robot)

package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import uniandes.lym.robot.view.Console;
 
import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;

@SuppressWarnings("serial")
public class Robot 
{


	private RobotWorldDec world;
	
	
	void setWorld(RobotWorld w) {
		world = (RobotWorldDec) w;	
	}

	String salida=new String();

	 
}
PARSER_END(Robot)

SKIP:
{
	" "
	|	"\r"
	|	"\t"
	| "\n"
}

TOKEN: /* Nombres de objetos de bajo nivel*/
{
		<BALLOONS:  "BALLOONS" >
		|	<CHIPS:     "CHIPS"  >	

}
TOKEN : /*Definicion de un entero*/
{
		<NUM: (<DIGIT>)+ >
		|  	<#DIGIT: ["0"-"9"] >
        
}
//PALABRAS ESPECIALES
TOKEN:
{
  	< VARS: "VARS">
| 	< PROCS: "PROCS">
| 	< INIT: "ROBOT_R">
}
/*TOKENS DE LENGUAJE DE ALTO NIVEL */


/* CONDICIONES y COMANDOS*/
TOKEN:
{
		< FACING: "facing">
	| 	< CANPUT: "canput">
	| 	< CANPICK: "canpick" >
	| 	< CANMOVEINDIR: "canmoveindir" >
	| 	< CANJUMPINDIR: "canjumpindir" >
	| 	< CANMOVETOTHE: "canmovetothe" >
	| 	< CANJUMPTOTHE: "canjumptothe" >
	| 	< NOT:	"not" >
	
	|   < ASSIGNTO: "assignto" >
	|	< GOTO: "goto">
	| 	< MOVE: "move">
	| 	< TURN: "turn">
	| 	< FACE: "face">
	| 	< MOVETOTHE: "movetothe">
	| 	< MOVEINDIR: "moveindir">
	| 	< JUMPTOTHE: "jumptothe">
	| 	< JUMPINDIR: "jumpindir">
	|  	< NOP:"nop" >
	|  	< PUT:"put" >
	|  	< PICK:"pick" >
}

/*CONTROL*/
TOKEN:
{
 	< IF: "if" >
| 	< THEN: "then" >
| 	< ELSE: "else" >
| 	< WHILE: "while" >
| 	< DO: "do" >
| 	< REPEAT: "repeat" >
}
/*DIRECCIONES Y ORIENTACIONES*/
TOKEN:
{
 	< FRONT: "front" >
| 	< LEFT: "left" >
| 	< RIGHT: "right" >
| 	< BACK: "back" >
| 	< NORTH: "north" >
| 	< SOUTH: "south" >
| 	< EAST: "east">
|	< WEST: "west" >
| 	< AROUND: "around">
}

//Nombres
TOKEN:
{
	< #MAY: ["A"-"Z"] >
|   < #MIN: ["a"-"z"]>
| 	< NAME: (<MAY>|<MIN>) (<MAY>|<MIN>|<NUM>)*>

}

boolean command(Console sistema):
	{	
		
		int x,y;
		salida=new String();	
	}

/* REGLAS DE PRODUCCION*/
	
	{
		(
		 s0()
		{
		    try {
	    			 Thread.sleep(900);
	    	    } catch (InterruptedException e) {
	    			        System.err.format("IOException: %s%n", e);
	    		    }
	    			 
			sistema.printOutput(salida);
			return true;
		})+

    	| <EOF> {return false;} 
	}
/*
	void put() :
	{
		int f=1;	
	}
	{
		( <CHIPS>    "," f=num() {world.putChips(f); salida = "Command:  Put Chips"; })
		|  	  ( <BALLOONS>   "," f=num() {world.putBalloons(f); salida = "Command:  Put Balloons";})	 

	}

void get() :
	{
		int f=1;	
	}
	{
		( <CHIPS>   "," f=num() {world.pickChips(f);salida = "Command:  Pick chips";})
		|  	  ( <BALLOONS>   "," f=num() {world.grabBalloons(f);salida="Command:  Pick balloons";})	 

	}

*/	
	

	/**
	 * Unsigned decimal number
	 * @return the corresponding value of the string
	 * @error  corresponding value is too large
	 */

	int num() throws Error:
	{	
		int total=1;
	}
	{
		<NUM>
		{
			try 
			{
				total = Integer.parseInt(token.image);
			} 
			catch (NumberFormatException ee) 
			{
				throw new Error("Number out of bounds: "+token.image+" !!");
			}
			return total;
		}
	}

void s0 ():
{}
{
	< INIT > (body())?

}

void X ():
{}
{
	(< NAME >|< NUM >)
}
void DIR ():
{}
{
	(< FRONT >|< RIGHT>|< LEFT >|< BACK >)
}
void OTN ():
{}
{
	(< NORTH >|< SOUTH >|< EAST >|< WEST >)
}
void OBJ ():
{}
{
	(< BALLOONS >|< CHIPS >)
}
void D ():
{}
{
	(< LEFT >|< RIGHT >|< AROUND >)
}

void body ():
{}
{
  vars() procs() blocks()
}

void vars ():
{ }
{
	< VARS > < NAME >(","< NAME >)* ";"
}

void procs ():
{ }
{
	< PROCS > (definition())*
	
}

void definition():
{}
{
  < NAME >"[" "|" (params())* "|" instructions() "]"
}

void params ():
{ }
{
	< NAME >(","< NAME >)* 
}

void instructions ():
{ }
{
	(commands()|control()|call())(";"(commands()|control()|call()))*
}

void blocks ():
{ }
{
	"[" instructions() "]"
}

/*COMANDOS*/
void commands ():
{ }
{
	assignto()
| 	go_to()
| 	put()
| 	pick()
| 	movetothe()
| 	moveindir()
| 	jumptothe()
| 	jumpindir()
| 	move()
| 	turn()
| 	face()
| 	nop()
}

void assignto ():
{ }
{
 	< ASSIGNTO > ":" < NUM > "," < NAME >
}
void go_to ():
{ }
{
 	< GOTO > ":" X()"," X()
}
void put ():
{ }
{
	< PUT > ":" X() "," OBJ()
}
void pick ():
{ }
{
 	< PICK > ":" X() "," OBJ()
}
void movetothe ():
{ }
{
  < MOVETOTHE > ":" X() "," OBJ()
}
void moveindir ():
{ }
{	
 	 < MOVEINDIR > ":"X() "," OTN()
}
void jumptothe ():
{ }
{
 	< JUMPTOTHE > ":" X() "," DIR()
}
void jumpindir ():
{ }
{
 	< JUMPINDIR > ":"X() "," OTN()
}
void move ():
{ }
{
  	< MOVE > ":" X()
}
void turn ():
{ }
{
  < TURN > ":" D() 
}
void face ():
{ }
{
  < FACE > ":" OTN()
}
void nop ():
{ }
{
	< NOP > ":"  
}


/*CONTROL*/
void control ():
{ }
{
	conditional() | loop() | repeat()
}

/*CONDICIONALES*/
void conditional ():
{ }
{
	<IF> ":" condition() <THEN> ":" blocks() <ELSE> ":" blocks() 
}

void condition ():
{}
{
	facing()
|	canput()
|	canpick()
|	canmoveindir()
|	canjumpindir()
|	canmovetothe()
|	canjumptothe()
|	not()
}

void facing ():
{}
{
	<FACING> ":" (<NORTH>|<SOUTH>|<EAST>|<WEST>)	
}

void canput():
{}
{
	<CANPUT> ":" X() "," (<BALLOONS> | <CHIPS>)	
}

void canpick():
{}
{
	<CANPICK> ":" X() "," (<BALLOONS> | <CHIPS>)
}

void canmoveindir():
{}
{
	<CANMOVEINDIR> ":" X() "," (<NORTH>|<SOUTH>|<EAST>|<WEST>)
}

void canjumpindir():
{}
{
	<CANJUMPINDIR> ":" X() "," (<NORTH>|<SOUTH>|<EAST>|<WEST>)
}

void canmovetothe():
{}
{
	<CANMOVETOTHE> ":" X() "," (<FRONT>|<RIGHT>|<LEFT>|<BACK>)
}

void canjumptothe():
{}
{
	<CANJUMPTOTHE> ":" X() "," (<FRONT>|<RIGHT>|<LEFT>|<BACK>)
}

void not():
{}
{
	<NOT> ":" condition()
}


void loop ():
{ }
{
	<WHILE> ":" condition() <DO> ":" blocks()
}

void repeat ():
{ }
{
	<REPEAT> ":" X() blocks()
}

void call ():
{ }
{
	< NAME > ":" args() 
}

void args():
{}
{
  	X()(","X())*
}
