JavaCC/JavaCC/source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import uniandes.lym.robot.view.Console;

import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;

@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;


        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();

  final public boolean command(Console sistema) throws ParseException {
                int x,y;
                salida=new String();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INIT:
      label_1:
      while (true) {
        s0();
                    try {
                                 Thread.sleep(900);
                    } catch (InterruptedException e) {
                                        System.err.format("IOException: %s%n", e);
                            }

                        sistema.printOutput(salida);
                        {if (true) return true;}
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INIT:
          ;
          break;
        default:
          jj_la1[0] = jj_gen;
          break label_1;
        }
      }
      break;
    case 0:
      jj_consume_token(0);
                 {if (true) return false;}
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/*
	void put() :
	{
		int f=1;	
	}
	{
		( <CHIPS>    "," f=num() {world.putChips(f); salida = "Command:  Put Chips"; })
		|  	  ( <BALLOONS>   "," f=num() {world.putBalloons(f); salida = "Command:  Put Balloons";})	 

	}

void get() :
	{
		int f=1;	
	}
	{
		( <CHIPS>   "," f=num() {world.pickChips(f);salida = "Command:  Pick chips";})
		|  	  ( <BALLOONS>   "," f=num() {world.grabBalloons(f);salida="Command:  Pick balloons";})	 

	}

*/


        /**
	 * Unsigned decimal number
	 * @return the corresponding value of the string
	 * @error  corresponding value is too large
	 */
  final public int num() throws ParseException, Error {
                int total=1;
    jj_consume_token(NUM);
                        try
                        {
                                total = Integer.parseInt(token.image);
                        }
                        catch (NumberFormatException ee)
                        {
                                {if (true) throw new Error("Number out of bounds: "+token.image+" !!");}
                        }
                        {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  final public void s0() throws ParseException {
    jj_consume_token(INIT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARS:
      body();
      break;
    default:
      jj_la1[2] = jj_gen;
      ;
    }
  }

  final public void X() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NAME:
      jj_consume_token(NAME);
      break;
    case NUM:
      jj_consume_token(NUM);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void DIR() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FRONT:
      jj_consume_token(FRONT);
      break;
    case RIGHT:
      jj_consume_token(RIGHT);
      break;
    case LEFT:
      jj_consume_token(LEFT);
      break;
    case BACK:
      jj_consume_token(BACK);
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void OTN() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NORTH:
      jj_consume_token(NORTH);
      break;
    case SOUTH:
      jj_consume_token(SOUTH);
      break;
    case EAST:
      jj_consume_token(EAST);
      break;
    case WEST:
      jj_consume_token(WEST);
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void OBJ() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BALLOONS:
      jj_consume_token(BALLOONS);
      break;
    case CHIPS:
      jj_consume_token(CHIPS);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void D() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEFT:
      jj_consume_token(LEFT);
      break;
    case RIGHT:
      jj_consume_token(RIGHT);
      break;
    case AROUND:
      jj_consume_token(AROUND);
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void body() throws ParseException {
    vars();
    procs();
    blocks();
  }

  final public void vars() throws ParseException {
    jj_consume_token(VARS);
    jj_consume_token(NAME);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[8] = jj_gen;
        break label_2;
      }
      jj_consume_token(50);
      jj_consume_token(NAME);
    }
    jj_consume_token(51);
  }

  final public void procs() throws ParseException {
    jj_consume_token(PROCS);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        ;
        break;
      default:
        jj_la1[9] = jj_gen;
        break label_3;
      }
      definition();
    }
  }

  final public void definition() throws ParseException {
    jj_consume_token(NAME);
    jj_consume_token(52);
    jj_consume_token(53);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case NAME:
        ;
        break;
      default:
        jj_la1[10] = jj_gen;
        break label_4;
      }
      params();
    }
    jj_consume_token(53);
    instructions();
    jj_consume_token(54);
  }

  final public void params() throws ParseException {
    jj_consume_token(NAME);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      jj_consume_token(50);
      jj_consume_token(NAME);
    }
  }

  final public void instructions() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGNTO:
    case GOTO:
    case MOVE:
    case TURN:
    case FACE:
    case MOVETOTHE:
    case MOVEINDIR:
    case JUMPTOTHE:
    case JUMPINDIR:
    case NOP:
    case PUT:
    case PICK:
      commands();
      break;
    case IF:
    case WHILE:
    case REPEAT:
      control();
      break;
    case NAME:
      call();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_6;
      }
      jj_consume_token(51);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ASSIGNTO:
      case GOTO:
      case MOVE:
      case TURN:
      case FACE:
      case MOVETOTHE:
      case MOVEINDIR:
      case JUMPTOTHE:
      case JUMPINDIR:
      case NOP:
      case PUT:
      case PICK:
        commands();
        break;
      case IF:
      case WHILE:
      case REPEAT:
        control();
        break;
      case NAME:
        call();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void blocks() throws ParseException {
    jj_consume_token(52);
    instructions();
    jj_consume_token(54);
  }

/*COMANDOS*/
  final public void commands() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGNTO:
      assignto();
      break;
    case GOTO:
      go_to();
      break;
    case PUT:
      put();
      break;
    case PICK:
      pick();
      break;
    case MOVETOTHE:
      movetothe();
      break;
    case MOVEINDIR:
      moveindir();
      break;
    case JUMPTOTHE:
      jumptothe();
      break;
    case JUMPINDIR:
      jumpindir();
      break;
    case MOVE:
      move();
      break;
    case TURN:
      turn();
      break;
    case FACE:
      face();
      break;
    case NOP:
      nop();
      break;
    default:
      jj_la1[15] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void assignto() throws ParseException {
    jj_consume_token(ASSIGNTO);
    jj_consume_token(55);
    jj_consume_token(NUM);
    jj_consume_token(50);
    jj_consume_token(NAME);
  }

  final public void go_to() throws ParseException {
    jj_consume_token(GOTO);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    X();
  }

  final public void put() throws ParseException {
    jj_consume_token(PUT);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    OBJ();
  }

  final public void pick() throws ParseException {
    jj_consume_token(PICK);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    OBJ();
  }

  final public void movetothe() throws ParseException {
    jj_consume_token(MOVETOTHE);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    OBJ();
  }

  final public void moveindir() throws ParseException {
    jj_consume_token(MOVEINDIR);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    OTN();
  }

  final public void jumptothe() throws ParseException {
    jj_consume_token(JUMPTOTHE);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    DIR();
  }

  final public void jumpindir() throws ParseException {
    jj_consume_token(JUMPINDIR);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    OTN();
  }

  final public void move() throws ParseException {
    jj_consume_token(MOVE);
    jj_consume_token(55);
    X();
  }

  final public void turn() throws ParseException {
    jj_consume_token(TURN);
    jj_consume_token(55);
    D();
  }

  final public void face() throws ParseException {
    jj_consume_token(FACE);
    jj_consume_token(55);
    OTN();
  }

  final public void nop() throws ParseException {
    jj_consume_token(NOP);
    jj_consume_token(55);
  }

/*CONTROL*/
  final public void control() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      conditional();
      break;
    case WHILE:
      loop();
      break;
    case REPEAT:
      repeat();
      break;
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/*CONDICIONALES*/
  final public void conditional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(55);
    condition();
    jj_consume_token(THEN);
    jj_consume_token(55);
    blocks();
    jj_consume_token(ELSE);
    jj_consume_token(55);
    blocks();
  }

  final public void condition() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FACING:
      facing();
      break;
    case CANPUT:
      canput();
      break;
    case CANPICK:
      canpick();
      break;
    case CANMOVEINDIR:
      canmoveindir();
      break;
    case CANJUMPINDIR:
      canjumpindir();
      break;
    case CANMOVETOTHE:
      canmovetothe();
      break;
    case CANJUMPTOTHE:
      canjumptothe();
      break;
    case NOT:
      not();
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void facing() throws ParseException {
    jj_consume_token(FACING);
    jj_consume_token(55);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NORTH:
      jj_consume_token(NORTH);
      break;
    case SOUTH:
      jj_consume_token(SOUTH);
      break;
    case EAST:
      jj_consume_token(EAST);
      break;
    case WEST:
      jj_consume_token(WEST);
      break;
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void canput() throws ParseException {
    jj_consume_token(CANPUT);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BALLOONS:
      jj_consume_token(BALLOONS);
      break;
    case CHIPS:
      jj_consume_token(CHIPS);
      break;
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void canpick() throws ParseException {
    jj_consume_token(CANPICK);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BALLOONS:
      jj_consume_token(BALLOONS);
      break;
    case CHIPS:
      jj_consume_token(CHIPS);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void canmoveindir() throws ParseException {
    jj_consume_token(CANMOVEINDIR);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NORTH:
      jj_consume_token(NORTH);
      break;
    case SOUTH:
      jj_consume_token(SOUTH);
      break;
    case EAST:
      jj_consume_token(EAST);
      break;
    case WEST:
      jj_consume_token(WEST);
      break;
    default:
      jj_la1[21] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void canjumpindir() throws ParseException {
    jj_consume_token(CANJUMPINDIR);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NORTH:
      jj_consume_token(NORTH);
      break;
    case SOUTH:
      jj_consume_token(SOUTH);
      break;
    case EAST:
      jj_consume_token(EAST);
      break;
    case WEST:
      jj_consume_token(WEST);
      break;
    default:
      jj_la1[22] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void canmovetothe() throws ParseException {
    jj_consume_token(CANMOVETOTHE);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FRONT:
      jj_consume_token(FRONT);
      break;
    case RIGHT:
      jj_consume_token(RIGHT);
      break;
    case LEFT:
      jj_consume_token(LEFT);
      break;
    case BACK:
      jj_consume_token(BACK);
      break;
    default:
      jj_la1[23] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void canjumptothe() throws ParseException {
    jj_consume_token(CANJUMPTOTHE);
    jj_consume_token(55);
    X();
    jj_consume_token(50);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FRONT:
      jj_consume_token(FRONT);
      break;
    case RIGHT:
      jj_consume_token(RIGHT);
      break;
    case LEFT:
      jj_consume_token(LEFT);
      break;
    case BACK:
      jj_consume_token(BACK);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void not() throws ParseException {
    jj_consume_token(NOT);
    jj_consume_token(55);
    condition();
  }

  final public void loop() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(55);
    condition();
    jj_consume_token(DO);
    jj_consume_token(55);
    blocks();
  }

  final public void repeat() throws ParseException {
    jj_consume_token(REPEAT);
    jj_consume_token(55);
    X();
    blocks();
  }

  final public void call() throws ParseException {
    jj_consume_token(NAME);
    jj_consume_token(55);
    args();
  }

  final public void args() throws ParseException {
    X();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 50:
        ;
        break;
      default:
        jj_la1[25] = jj_gen;
        break label_7;
      }
      jj_consume_token(50);
      X();
    }
  }

  /** Generated Token Manager. */
  public RobotTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[26];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x800,0x801,0x200,0x80,0x0,0x0,0x60,0x0,0x0,0x0,0x0,0x0,0xfff00000,0x0,0xfff00000,0xfff00000,0x0,0xff000,0x0,0x60,0x60,0x0,0x0,0x0,0x0,0x0,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x0,0x20000,0x3c0,0x3c00,0x0,0x4180,0x40000,0x20000,0x20000,0x40000,0x20029,0x80000,0x20029,0x0,0x29,0x0,0x3c00,0x0,0x0,0x3c00,0x3c00,0x3c0,0x3c0,0x40000,};
   }

  /** Constructor with InputStream. */
  public Robot(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Robot(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Robot(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Robot(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 26; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[56];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 26; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 56; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
